[tests] Build out some additional tests and use https in them